# ai-challenge

./: .gitignore  README.md  build.gradle.kts  gradle.properties  install_and_run.sh  pyproject.toml  requirements-dev.txt  requirements.txt  settings.gradle.kts  weather_client.py  weather_server.py
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/xyz/sandboiii/agentcooper/: AgentCooperApplication.kt
app/src/main/java/xyz/sandboiii/agentcooper/data/repository/: ChatRepositoryImpl.kt  McpRepositoryImpl.kt  RAGRepository.kt  ScheduledTaskRepositoryImpl.kt  SessionRepositoryImpl.kt
app/src/main/java/xyz/sandboiii/agentcooper/data/service/: ScheduledTaskForegroundService.kt
app/src/main/java/xyz/sandboiii/agentcooper/data/worker/: ScheduledTaskWorkManager.kt  ScheduledTaskWorker.kt
app/src/main/java/xyz/sandboiii/agentcooper/di/: DatabaseModule.kt  NetworkModule.kt  RepositoryModule.kt  StorageModule.kt  UseCaseModule.kt  WorkerModule.kt
app/src/main/java/xyz/sandboiii/agentcooper/domain/model/: AIModel.kt  ChatMessage.kt  ChatSession.kt  ExportedChatMessage.kt  ScheduledTask.kt
app/src/main/java/xyz/sandboiii/agentcooper/domain/repository/: ChatRepository.kt  McpRepository.kt  (+2 more)
app/src/main/java/xyz/sandboiii/agentcooper/presentation/: MainActivity.kt
app/src/main/java/xyz/sandboiii/agentcooper/util/: ChatProcessor.kt  Constants.kt  NotificationManager.kt  PreferencesManager.kt  TokenCounter.kt
app/src/main/res/values/: strings.xml  themes.xml
tests/: test_integration.py  test_weather_server.py
(+50 files in other folders)
